# metalai

./: pyproject.toml
metalai/: constants.py  encoders.py  extract_lyrics.py  main.py
tests/: test_extract_lyrics.py
